--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "electron-app",
+  "name": "flydesk-app",
+  "productName": "FlyDeskApp",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
@@ -11,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Remote Desktop Control Application",
   "dependencies": {
     "robotjs": "^0.6.0",
     "socket.io-client": "^4.8.1"
@@ -22,8 +23,9 @@
     "electron-builder": "^26.0.12"
   },
   "build": {
-    "appId": "com.yourapp.remotedeskapp",
-    "productName": "RemoteDeskApp",
+    "appId": "com.flydesk.app",
+    "productName": "FlyDeskApp",
+    "artifactName": "${productName} Setup ${version}.${ext}",
     "win": {
       "target": "nsis"
     }
